--- a/deploy/index.html
+++ b/deploy/index.html
@@ -33,9 +33,15 @@
             <div>
                 <h1> About </h1>
                 <div id="text">
-                    <p>	The Smithsonian Folklife Festival is an international exposition of living cultural heritage annually produced outdoors on the National Mall of the United States in Washington, D.C., by the Smithsonian Institution’s Center for Folklife and Cultural Heritage.</p>
-        	        <p>The Festival takes place for two weeks every summer overlapping the Fourth of July holiday. It is an educational presentation that features community-based cultural exemplars. Free to the public, like other Smithsonian museums, each Festival typically draws hundreds of thousands of visitors.</p>
-        	        <p>Initiated in 1967, the Festival has become a national and international model of a research-based presentation of contemporary living cultural traditions. Over the years, it has brought more than twenty-three thousand musicians, artists, performers, craftspeople, workers, cooks, storytellers, and others to the National Mall to demonstrate the skills, knowledge, and aesthetics that embody the creative vitality of community-based traditions.</p>
+                    <div id="one">
+                        <p id="1">	The Smithsonian Folklife Festival is an international exposition of living cultural heritage annually produced outdoors on the National Mall of the United States in Washington, D.C., by the Smithsonian Institution’s Center for Folklife and Cultural Heritage.</p>
+                    </div>
+                    <div id="two">
+        	            <p id="2">The Festival takes place for two weeks every summer overlapping the Fourth of July holiday. It is an educational presentation that features community-based cultural exemplars. Free to the public, like other Smithsonian museums, each Festival typically draws hundreds of thousands of visitors.</p>
+                    </div>
+                    <div id="three">
+        	            <p id="3">Initiated in 1967, the Festival has become a national and international model of a research-based presentation of contemporary living cultural traditions. Over the years, it has brought more than twenty-three thousand musicians, artists, performers, craftspeople, workers, cooks, storytellers, and others to the National Mall to demonstrate the skills, knowledge, and aesthetics that embody the creative vitality of community-based traditions.</p>
+                    </div>
                 </div>
                 <aside></aside>
             </div>
@@ -49,9 +55,15 @@
                         </section>
                         
                         <section id="section-3-text">
-                            <p> The Festival is a complex production, over the years drawing on the research and presentational skills of more than a thousand folklorists, cultural anthropologists, ethnomusicologists, and numerous other academic and lay scholars. Its production involves the expertise of hundreds of technical staff, the efforts of volunteers, and the backing of sponsors and supporters.</p>
-                            <p>The Festival has strong impacts on policies, scholarship, and folks “back home.” Many states and several nations have remounted Festival programs locally and used them to generate laws, institutions, educational programs, books, documentary films, recordings, and museum and traveling exhibitions. In many cases, the Festival has energized local and regional tradition bearers and their communities and, thus, helped to conserve and create cultural resources. Festival practice served as both the backdrop and inspiration for the consideration and ultimately the development of UNESCO’s 2003 International Convention on the Safeguarding of the Intangible Cultural Heritage.</p>
-                            <p>The Festival was a centerpiece of the U.S. Bicentennial, lasting for three months in 1976; it has provided models for numerous Presidential Inaugural programs, the Black Family Reunion, the Los Angeles Festival, Southern Crossroads for the 1996 Atlanta Olympics, the Smithsonian’s 150th Birthday Party on the Mall, the National World War II Reunion, and the First Americans Festival, which celebrated the opening of the National Museum of the American Indian.</p>
+                            <div id="one">
+                                <p> The Festival is a complex production, over the years drawing on the research and presentational skills of more than a thousand folklorists, cultural anthropologists, ethnomusicologists, and numerous other academic and lay scholars. Its production involves the expertise of hundreds of technical staff, the efforts of volunteers, and the backing of sponsors and supporters.</p>
+                            </div>
+                            <div id="two">
+                                <p>The Festival has strong impacts on policies, scholarship, and folks “back home.” Many states and several nations have remounted Festival programs locally and used them to generate laws, institutions, educational programs, books, documentary films, recordings, and museum and traveling exhibitions. In many cases, the Festival has energized local and regional tradition bearers and their communities and, thus, helped to conserve and create cultural resources. Festival practice served as both the backdrop and inspiration for the consideration and ultimately the development of UNESCO’s 2003 International Convention on the Safeguarding of the Intangible Cultural Heritage.</p>
+                            </div>
+                            <div id="three">
+                                <p>The Festival was a centerpiece of the U.S. Bicentennial, lasting for three months in 1976; it has provided models for numerous Presidential Inaugural programs, the Black Family Reunion, the Los Angeles Festival, Southern Crossroads for the 1996 Atlanta Olympics, the Smithsonian’s 150th Birthday Party on the Mall, the National World War II Reunion, and the First Americans Festival, which celebrated the opening of the National Museum of the American Indian.</p>
+                            </div>
                             <h2> “This is an opportunity to harness the whole of the Smithsonian. It’s an opportunity to weave sustainable practices into every aspect of our operations” </h2>
                         </section>
                     
